<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="bt_true">true</string>
    <string name="bt_false">false</string>
    <string name="bt_prev">prev</string>
    <string name="bt_next">next</string>

    <string name="right_toast">right !</string>
    <string name="wrong_toast">wrong !</string>

    <string name="warning_text">are you sure ?</string>
    <string name="bt_show_answer">show_answer</string>
    <string name="bt_cheat">Cheat !</string>
    <string name="toast_judgement">Cheating is worng</string>

    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>

</resources>