<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textAlignment="center"
        tools:text="question"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/bt_true"/>
        <Button
            android:id="@+id/bt_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_false"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/bt_cheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_cheat"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/bt_prev"
            android:contentDescription="@string/bt_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            android:layout_marginEnd="16dp"
            android:padding="16dp"/>
        <ImageButton
            android:id="@+id/bt_next"
            android:contentDescription="@string/bt_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"
            android:padding="16dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>